tests/NormalTests/paczka1/small_fuzzy/25963487.err
Error in line 2: ABN S838 65,7
Error in line 6: EsXBot S826 55,04
Error in line 3: ABN A853 69,3
Error in line 4: EsXBot S826 55,4
Error in line 10: EsXBot S350 56,5
Error in line 12: ABN S350 51,2
